primo commit del branch flexbox

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content=""/>
         <meta name="keywords" content=""/>
         <meta name="author" content="Nicola Cecchetto"/>
-        <link rel="stylesheet" href="style.css" media="handheld,screen"/>
+        <!--<link rel="stylesheet" href="style.css" media="handheld,screen"/>-->
         <link rel="stylesheet" href="mini.css" media="handheld, screen and (max-width:600px), only screen and (max-device-width:600px)"/>
         <link rel="shortcut icon" type="image/png" href=""/>
     </head>
