--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
         <meta name="description" content=""/>
         <meta name="keywords" content=""/>
         <meta name="author" content="Nicola Cecchetto"/>
-        <!--<link rel="stylesheet" href="style.css" media="handheld,screen"/>-->
-        <link rel="stylesheet" href="mini.css" media="handheld, screen and (max-width:600px), only screen and (max-device-width:600px)"/>
+        <link rel="stylesheet" href="style.css" media="handheld,screen"/>
+        <!--<link rel="stylesheet" href="mini.css" media="handheld, screen and (max-width:600px), only screen and (max-device-width:600px)"/>-->
         <link rel="shortcut icon" type="image/png" href=""/>
     </head>
     <body>
         <header>
             <h1><span lang="en">The Acid Eye</span></h1>
         </header>
+        <div id="links">
         <nav id="menu">
             <ul>
-                <li lang="en">Home</li>
+                <li><a href="#" lang="en">Home</a></li>
                 <li><a href="band.html">La <span lang="en">Band</span></a></li>
                 <li><a href="eventi.html">Eventi</a></li>
                 <li><a href="contatti.html">Contatti</a></li>
@@ -30,6 +31,7 @@
                 <li lang="en"><a href="https://bit.ly/InstaTheAcidEye" target="_blank">Instagram</a></li>
             </ul>
         </nav>
+        </div>
         <main>
             <h2 lang="en">Home Page</h2>
             <h3>Prossimo Evento</h3>
