--- a/band.html
+++ b/band.html
@@ -6,6 +6,7 @@
         <meta name="description" content=""/>
         <meta name="keywords" content=""/>
         <meta name="author" content="Nicola Cecchetto"/>
+        <meta name="viewport" content="width=device-width; initial-scale=1.0;"> <!-- MAGIA NERA PER FARE IN MODO CHE PRENDA LE DIMENSIONI GIUSTE SU MOBILE -->
         <link rel="stylesheet" href="style.css" media="handheld,screen"/>
         <link rel="stylesheet" href="mini.css" media="handheld, screen and (max-width:600px), only screen and (max-device-width:600px)"/>
         <link rel="shortcut icon" type="image/png" href="images/logo.jpg"/>
